syntax = "proto3";

package grpc.follow;

service FollowService {
    rpc FollowUser (FollowRequest) returns (FollowResponse);
    rpc GetOffUser (FollowRequest) returns (FollowResponse);
}


message RetCodeResponse{
    int32 Errorcode = 1;
    string message = 2;
}

message FollowRequest {
      int32  user_id = 1;
      int32  follow_by = 2;
}

message FollowResponse {
    RetCodeResponse retcode = 1;
}



